Fix for deploy issue on bluemix.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,5 +3,5 @@
 - Upgraded reference to the terminal js to the latest version 
 - Created a new home page including new css and html
 - Added OpenWhisk tutorial content 
-- 
+- Created a new deploy_setting folder that includes files 
 	 
